--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -5,7 +5,7 @@ Licence terms: LGPL (see licence.txt)
 
 ---------------------------------- Change log ----------------------------------
 
-* Version x.x.x (xxxxxxxxxxxx):
+* Version 0.9.1 (May 5, 2013):
 
 - Generate SVG from diagram model.
 - Convert from grammar model to diagram model.
