--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -5,6 +5,12 @@ Licence terms: LGPL (see licence.txt)
 
 ---------------------------------- Change log ----------------------------------
 
+* Version 0.9.2 (xxxxxxxxxxx):
+
+- Support for special sequence, using "(? ... ?)" instead of "? ... ?" though.
+- Support "(* ... *)" comments when reading BNF.
+
+
 * Version 0.9.1 (May 5, 2013):
 
 - Generate SVG from diagram model.
