--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -8,6 +8,7 @@ Licence terms: LGPL (see licence.txt)
 * Version 0.9.2 (xxxxxxxxxxx):
 
 - XML escape is added in case of illegal characters in SVG.
+- Possibility to define various styles (font, colors, etc.) when rendering SVG.
 - Noop is removed, empty sequence replaces it.
 - Package names are changed to better reflect intent of API.
 - Support for special sequence, using "(? ... ?)" instead of "? ... ?" though.
