--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -5,7 +5,7 @@ Licence terms: LGPL (see licence.txt)
 
 ---------------------------------- Change log ----------------------------------
 
-* Version 0.9.2 (xxxxxxxxxxx):
+* Version 0.9.2 (May 6, 2013):
 
 - XML escape is added in case of illegal characters in SVG.
 - Possibility to define various styles (font, colors, etc.) when rendering SVG.
