--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -7,6 +7,11 @@ Licence terms: LGPL (see licence.txt)
 
 * Version 0.9.2 (May 6, 2013):
 
+- Produced SVG is now very compact.
+
+
+* Version 0.9.2 (May 6, 2013):
+
 - XML escape is added in case of illegal characters in SVG.
 - Possibility to define various styles (font, colors, etc.) when rendering SVG.
 - Noop is removed, empty sequence replaces it.
