--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -5,6 +5,10 @@ Licence terms: LGPL (see licence.txt)
 
 ---------------------------------- Change log ----------------------------------
 
+* Version 0.9.4 (unreleased):
+
+- [#4] Make this a Maven project
+
 * Version 0.9.3 (May 7, 2013):
 
 - Produced SVG is now very compact.
