--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: ASL 2.0 (see licence.txt)
 
 * Version 0.9.4 (unreleased):
 
+- [#15] Rename packages and Maven groupId to net.nextencia.*
 - [#12] Implement Grammar.toString() etc.
 - [#10] Newlines separating rule references lead to the separated rules becoming one
 - [#5] Change the license to ASL 2.0
