--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -5,7 +5,7 @@ Licence terms: ASL 2.0 (see licence.txt)
 
 ---------------------------------- Change log ----------------------------------
 
-* Version 0.9.4 (unreleased):
+* Version 0.9.4 (October 9, 2017):
 
 - Store original parsed expression in rule.
 - Convert any "expr (',' expr)*" to a loop.
