[#22] Config to replace special sequences with custom elements.

--- a/RRDiagram/Release/changelog.txt
+++ b/RRDiagram/Release/changelog.txt
@@ -8,6 +8,7 @@ Licence terms: ASL 2.0 (see licence.txt)
 * Version 0.9.5 (Unreleased):
 - [#23] Option to align connectors on base line or vertically centered.
 - [#19] API to define elements to place at start and/or end of a rule.
+- [#22] GrammarToRRDiagram config to replace special sequences with custom elements.
 
 
 * Version 0.9.4 (October 9, 2017):
